--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <h1>List of Image Links</h1>
     <ul>
-        <li><a href="/tests/assets/1-comics-page.jpg" target="_blank">Image 1</a></li>
-        <li><a href="/tests/assets/2-comics-page.jpg" target="_blank">Image 2</a></li>
-        <li><a href="/tests/assets/3-comics-page.jpg" target="_blank">Image 3</a></li>
-        <li><a href="/tests/assets/4-comics-page.jpg" target="_blank">Image 4</a></li>
-        <li><a href="/tests/assets/5-comics-page.jpg" target="_blank">Image 5</a></li>
-        <li><a href="/tests/assets/6-comics-page.jpg" target="_blank">Image 6</a></li>
-        <li><a href="/tests/assets/7-comics-page.jpg" target="_blank">Image 7</a></li>
-        <li><a href="/tests/assets/8-comics-page.jpg" target="_blank">Image 8</a></li>
+        <li><a href="./tests/assets/1-comics-page.jpg" target="_blank">Image 1</a></li>
+        <li><a href="./tests/assets/2-comics-page.jpg" target="_blank">Image 2</a></li>
+        <li><a href="./tests/assets/3-comics-page.jpg" target="_blank">Image 3</a></li>
+        <li><a href="./tests/assets/4-comics-page.jpg" target="_blank">Image 4</a></li>
+        <li><a href="./tests/assets/5-comics-page.jpg" target="_blank">Image 5</a></li>
+        <li><a href="./tests/assets/6-comics-page.jpg" target="_blank">Image 6</a></li>
+        <li><a href="./tests/assets/7-comics-page.jpg" target="_blank">Image 7</a></li>
+        <li><a href="./tests/assets/8-comics-page.jpg" target="_blank">Image 8</a></li>
     </ul>
 </body>
 </html>
